# Mirror-AI

./: README.md  app.json  bundled-doc-brutalist.spec  bundled-learning-path.spec  manifest.json  mirror-agent-supervisor.spec  mirror-decision-critic.spec  mirror-prompt-analyzer.spec  package_tool.py  tool-parthbansal20-5851-agent-supervisor-76y2kr8r.spec  tool-parthbansal20-5851-decision-critic-b2r4yr54.spec  tool-parthbansal20-5851-doc-brutalist-b4fkzsrj.spec  tool-parthbansal20-5851-learning-path-wyh4drj.spec  tool-parthbansal20-5851-project-genesis-8rfxrwge.spec  tool-parthbansal20-5851-prompt-analyzer-m9fex7sf.spec
.anna/: app.json  dev-app.json  executas.lock.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  anna.d.ts  main.tsx
app/src/components/: IrreversibleGate.module.css  IrreversibleGate.tsx
app/src/components/Layout/: BackgroundOrbs.tsx  Layout.module.css  Layout.tsx  Sidebar.module.css  Sidebar.tsx  TopBar.tsx  (+1 more)
app/src/hooks/: mockAnna.ts  useAgentSupervisor.ts  useAnna.ts  useDecisionCritic.ts  useLearningPath.ts  useProfile.ts  useProjectGenesis.ts  usePromptAnalysis.ts
app/src/store/: profileStore.ts  types.ts
app/src/styles/: animations.css  globals.css  tokens.css
bundle/: anna-tool-ids.js  index.html
bundle/assets/: index-A_2rCzef.js  index-B4ZfsT-i.js  index-Bh1Ipwni.js  index-BjFmwZNh.css  index-Bls-7GFM.js  index-BpDOLFUE.js  index-C5GidLUK.js  index-C6mTHhVD.css  index-CTqumupq.css  index-CWXKBals.js  index-CtYJ1ZqH.js  index-CvnJ4giU.js  index-CzCJz0jl.js  index-DR7KcwOa.js  index-DVqUJiOu.js  index-dVT6bslu.css  index-qM1nvSOh.js  index-t5BNhWbH.css
docs/: APP_FLOW.md  DESIGN.md  DOC_BRUTALIST.md  GENESIS_PROMPT_OVERHAUL.md  IMPLEMENTATION_PLAN.md  PRD.md  PROJECT_GENESIS.md  RULES.md  SCHEMA.md  TECH_SPEC.md  TRACKER.md  V2_FIXES.md  V3_UI_MAKEOVER.md
executas/agent-supervisor/: agent_supervisor_plugin.py  executa.json  pyproject.toml
executas/agent-supervisor/.anna/: executa.json
executas/decision-critic/: decision_critic_plugin.py  executa.json  pyproject.toml
executas/decision-critic/.anna/: executa.json
executas/doc-brutalist/: doc_brutalist_plugin.py  executa.json  pyproject.toml
executas/doc-brutalist/.anna/: dev-executa.json  executa.json
executas/learning-path/: executa.json  learning_path_plugin.py  pyproject.toml
executas/learning-path/.anna/: executa.json
executas/project-genesis/: executa.json  project_genesis_plugin.py  pyproject.toml
executas/project-genesis/.anna/: executa.json
executas/prompt-analyzer/: executa.json  prompt_analyzer_plugin.py  pyproject.toml
executas/prompt-analyzer/.anna/: executa.json
(+71 files in other folders)
