[project]
name = "mirror-agent-supervisor"
version = "1.0.0"
description = "Mirror Agent Babysitter executa — AI workflow supervision and drift detection"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
mirror-agent-supervisor = "agent_supervisor_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
