[project]
name = "bundled-learning-path"
version = "1.0.0"
description = "Mirror Learning Path negotiator executa"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
learning-path = "learning_path_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
