[project]
name = "project-genesis"
version = "1.0.3"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tool-parthbansal20-5851-project-genesis-8rfxrwge = "project_genesis_plugin:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
