[project]
name = "mirror-prompt-analyzer"
version = "1.0.0"
description = "Mirror Prompt Archaeology executa — forensic analysis of failed AI prompts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
mirror-prompt-analyzer = "prompt_analyzer_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
